refactor: separate the bloated GaiaScene functions
- removeDegeneratedFace() -> SceneCleaner
- spendTransformMatrix() -> GaiaBaker
- weld() -> GaiaWelder
- unweld() -> GaiaUnWelder
- makgeTriangularFaces(), makgeTriangulateFaces() -> GaiaTriangulator
- extractPrimitives() -> GaiaExtractor